--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,7 @@ background: linear-gradient(to bottom, #000000, #EB5757); /* W3C, IE 10+/ Edge, 
 
 }
 
-@media (max-width: 425px) { 
+@media (max-width: 768px) { 
 	#to-top{
 		display: none;
 	}
@@ -862,6 +862,7 @@ background: linear-gradient(to bottom, #000000, #EB5757); /* W3C, IE 10+/ Edge, 
   .contain-proyects1{
     margin-left:60px;
     margin-top: 100px;
+    align-content: center;
   }
 
   .contain-proyects{
@@ -879,11 +880,11 @@ background: linear-gradient(to bottom, #000000, #EB5757); /* W3C, IE 10+/ Edge, 
   }
 
   .tittle-mobile{
-    margin:350px 45px 20px 120px;
+    margin-top:350px;
   }
 
   .subtitle-mobile{
-    margin:10px 45px 20px 140px; 
+    margin-top: 10px; 
   }
 
   .icons-mobile{
@@ -924,10 +925,14 @@ background: linear-gradient(to bottom, #000000, #EB5757); /* W3C, IE 10+/ Edge, 
 
   .cont-icons{
     margin-left: 130px;
+    align-content: center;
   }
   .cont-icons li{
     display: inline-block;
     width: 30px;
+     align-content: center;
   }
 
 }
+
+
